Fixed bug that prevented new colormaps being read from jars